Fix bg on mobile and adding placeholders date&time

--- a/1. CountDown Timer/app/styles/Event.module.css
+++ b/1. CountDown Timer/app/styles/Event.module.css
@@ -11,7 +11,7 @@
 }
 
 .control {
-  @apply block w-full py-2 pl-3 text-black placeholder:font-thin;
+  @apply block w-full py-2 pl-3 text-black bg-white placeholder:font-thin;
 }
 
 .control:focus {
